// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules -> player getPlayerServiceLogger 1`] = `
Array [
  Object {
    "level": "info",
    "message": "✅test works✅",
    "service": "PlayerService",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"✅test works✅\\",\\"level\\":\\"info\\",\\"service\\":\\"PlayerService\\"}",
  },
]
`;

exports[`modules -> player has known exports 1`] = `
Array [
  "getPlayerServiceLogger",
  "PlayerService",
]
`;

exports[`modules -> player playerService playback happy path 1`] = `undefined`;

exports[`modules -> player playerService playback happy path 2`] = `
Array [
  Object {
    "level": "info",
    "message": Object {
      "filename": "this-file-totes-exists.mp3",
      "method": "playFile",
      "state": Object {
        "correlationId": "1234567890",
      },
    },
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"this-file-totes-exists.mp3\\",\\"method\\":\\"playFile\\",\\"state\\":{\\"correlationId\\":\\"1234567890\\"}},\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> player playerService playback happy path 3`] = `
Array [
  Object {
    "filename": "this-file-totes-exists.mp3",
    "level": "debug",
    "message": "playback success",
    "method": "playFile",
    "state": Object {
      "correlationId": "1234567890",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"filename\\":\\"this-file-totes-exists.mp3\\",\\"method\\":\\"playFile\\",\\"state\\":{\\"correlationId\\":\\"1234567890\\"},\\"message\\":\\"playback success\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`modules -> player playerService rejects on invalid file 1`] = `"filename path is invalid"`;

exports[`modules -> player playerService rejects on invalid file 2`] = `
Array [
  Object {
    "level": "info",
    "message": Object {
      "filename": "this-file-totes-exists.mp3",
      "method": "playFile",
      "state": Object {
        "correlationId": "1234567890",
      },
    },
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"this-file-totes-exists.mp3\\",\\"method\\":\\"playFile\\",\\"state\\":{\\"correlationId\\":\\"1234567890\\"}},\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> player playerService rejects on invalid file 3`] = `
Array [
  Object {
    "filename": "this-file-totes-exists.mp3",
    "level": "error",
    "message": "filename path is invalid",
    "method": "playFile",
    "state": Object {
      "correlationId": "1234567890",
    },
    Symbol(level): "error",
    Symbol(message): "{\\"filename\\":\\"this-file-totes-exists.mp3\\",\\"message\\":\\"filename path is invalid\\",\\"method\\":\\"playFile\\",\\"state\\":{\\"correlationId\\":\\"1234567890\\"},\\"level\\":\\"error\\"}",
  },
]
`;

exports[`modules -> player playerService rejects on playback error 1`] = `
Object {
  "error": "KHAAAAAAN!",
}
`;

exports[`modules -> player playerService rejects on playback error 2`] = `
Array [
  Object {
    "level": "info",
    "message": Object {
      "filename": "this-file-totes-exists.mp3",
      "method": "playFile",
      "state": Object {
        "correlationId": "1234567890",
      },
    },
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":{\\"filename\\":\\"this-file-totes-exists.mp3\\",\\"method\\":\\"playFile\\",\\"state\\":{\\"correlationId\\":\\"1234567890\\"}},\\"level\\":\\"info\\"}",
  },
]
`;

exports[`modules -> player playerService rejects on playback error 3`] = `
Array [
  Object {
    "error": Object {
      "error": "KHAAAAAAN!",
    },
    "filename": "this-file-totes-exists.mp3",
    "level": "debug",
    "message": "playback failure",
    "method": "playFile",
    "state": Object {
      "correlationId": "1234567890",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"error\\":{\\"error\\":\\"KHAAAAAAN!\\"},\\"filename\\":\\"this-file-totes-exists.mp3\\",\\"method\\":\\"playFile\\",\\"state\\":{\\"correlationId\\":\\"1234567890\\"},\\"message\\":\\"playback failure\\",\\"level\\":\\"debug\\"}",
  },
]
`;
